old slurm/slurm-5176.out
clang++ -std=c++14 -stdlib=libc++ -O3 -ferror-limit=2 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-sign-conversion -Wno-exit-time-destructors -Wno-float-equal -Wno-global-constructors -Wno-missing-declarations -Wno-unused-parameter -Wno-padded -Wno-shadow -Wno-weak-vtables -Wno-missing-prototypes -Wno-unused-variable -ferror-limit=1 -Wno-deprecated -Wno-conversion -Wno-double-promotion -c src/direct_cuda_pattern.cc -o ./obj/direct_cuda_pattern.o -Iinclude -I/usr/local/cuda/include -I/usr/local/include -I/usr/include/c++/v1
In file included from src/direct_cuda_pattern.cc:3:
In file included from include/f/cuda_pattern/cuda_pattern.hpp:5:
include/f/cuda_pattern/cuda_pattern_config.hpp:44:13: error: use of undeclared identifier 'per_tilt_dim'
            per_tilt_dim[index]=(pat.diag[index]).size();
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
2 errors generated.
Makefile:28: recipe for target 'direct_cuda_pattern' failed
make: *** [direct_cuda_pattern] Error 1
Merit: 
before update_I_diff, dupm I_diff
0	0	0	0	0	
0	0	0	0	0	
0	0	0	0	0	
0	0	0	0	0	
0	0	0	0	0	


square residual is 0

before update_I_diff, dupm I_exp
0.99999762000000003148	7.2999999999999999873e-07	7.2999999999999999873e-07	0	0	

data.weights, data.ug, data.ar, data.diag, config.thickness, data.dim, data.I_exp, data.I_diff, config.column_index, data.cache, config.tilt_size, config.max_dim 
0x7ff2f0c01400 , 0x7ff2f0c00400 , 0x7ff2f0c00600 , 0x7ff2f0c00a00 , 1 , 0x7ff2f0c00c00 , 0x7ff2f0c00e00 , 0x7ff2f0c01000 , 0 , 0x7ff2f0a00000 , 5 , 5

after update_I_diff, dupm I_diff
-1.6922272488839595894e-06	3.7692244333933922353e-07	3.9530480342632047543e-07	0	0	
-0.0001071765249817113741	5.3378263119417302556e-05	5.3378261862752615153e-05	0	0	
-0.00010700652547734890163	5.3298263367276518029e-05	5.3298262110608476375e-05	0	0	
-6.8129308311348779625e-05	7.3428384480624247512e-05	-0.004094623624803206928	3.2647708758382469889e-05	3.2648893116033944942e-05	
-1.6922272484398703796e-06	3.7692126939927593958e-07	3.9530597736638354762e-07	0	0	


square residual is 1.6812431197579847145e-05

after update_I_diff, dupm I_exp
0.99999762000000003148	7.2999999999999999873e-07	7.2999999999999999873e-07	0	0	


1.6812431197579847145e-05

real	0m0.947s
user	0m0.124s
sys	0m0.640s
